--- a/public/comparison.html
+++ b/public/comparison.html
@@ -7,7 +7,7 @@
     <!-- Title of the webpage -->
     <title>Comparison</title>
     <!-- Link to CSS stylesheet -->
-    <link rel="stylesheet" href="../src/assets/css/style.css">
+    <link id="theme-link" rel="stylesheet" href="../src/assets/css/style.css">
     <!-- Shortcut icon for the webpage -->
     <link rel="shortcut icon" href="../src/assets/images/icons/favicon.ico" type="image/x-icon">
     <!-- Script link for JavaScript file with 'defer' attribute -->
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.css" integrity="sha384-CaZ9HRrOe1XpcaGkGyOT4yFc1EAAbTwQ9j6iZt0ewhucMuh1iZDrPOnGjbb4SSt3" crossorigin="anonymous">
     <!-- Script link to SimpleBar JS with 'defer' attribute -->
     <script src="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.js" integrity="sha384-oM5U7HaoT1uFyCMwe4FNjJ5MUEt/IGgF8nZG6K8M/A9fIpA3Sz4ri2thQqU6qBsp" crossorigin="anonymous" defer></script>
+    <script src="../src/assets/js/theme-switcher.js" defer></script>
 </head>
 <body>
     <!-- Header section -->
@@ -35,7 +36,7 @@
             <a class="width" href="contact.html">Contact & Info</a>
         </div>
     </nav>
-    
+
     <!-- Main content section -->
     <div class="mainPart" data-simplebar>
         <!-- Introduction paragraph -->
@@ -100,6 +101,24 @@
             <br><br>
             <b>Civilization VI:</b> Civ6, with its stylized art and turn-based nature, generally has more modest hardware requirements. The game is designed to be accessible to a wider range of systems, making it suitable for players with varying hardware capabilities. Civ6's scalability allows it to run smoothly on both newer and older hardware configurations.
         </p>
+    </div>
+
+    <button id="settingsButton">
+        <img id="settingsImage" src="../src/assets/images/icons/settings_icon.png" alt="Settings Icon">
+    </button>
+    
+    <div id="settingsOverlay">
+        <div id="settingsWindow">
+            <h2 class="settingsTitle">Settings</h2>
+            <div class="toggle-switch">
+                <h2>Theme:</h2>
+                <input type="checkbox" id="theme-switch">
+                <label for="theme-switch"></label>
+            </div>
+            <button id="closeButton">
+                <img src="../src/assets/images/icons/x.png" alt="Close Icon">
+            </button>            
+        </div>
     </div>
 </body> 
 </html>
