--- a/public/hoidle.html
+++ b/public/hoidle.html
@@ -7,11 +7,12 @@
     <!-- Title of the webpage -->
     <title>Hoidle</title>
     <!-- Link to CSS stylesheet -->
-    <link rel="stylesheet" href="../src/assets/css/style.css">
+    <link id="theme-link" rel="stylesheet" href="../src/assets/css/style.css">
     <!-- Shortcut icon for the webpage -->
     <link rel="shortcut icon" href="../src/assets/images/icons/favicon.ico" type="image/x-icon">
     <!-- Script link for JavaScript file with 'defer' attribute -->
     <script src="../src/assets/js/scripts.js" defer></script>
+    <script src="../src/assets/js/theme-switcher.js" defer></script>
 </head>
 
 <body>
@@ -25,16 +26,23 @@
         </div>
     </nav>
 
-    <!-- <button id="settingsButton">
+    <button id="settingsButton">
         <img id="settingsImage" src="../src/assets/images/icons/settings_icon.png" alt="Settings Icon">
     </button>
     
-      <div id="settingsOverlay">
+    <div id="settingsOverlay">
         <div id="settingsWindow">
-          <h2 class="settingsTitle">Settings</h2>
-          <button id="closeButton">Close</button>
+            <h2 class="settingsTitle">Settings</h2>
+            <div class="toggle-switch">
+                <h2>Theme:</h2>
+                <input type="checkbox" id="theme-switch">
+                <label for="theme-switch"></label>
+            </div>
+            <button id="closeButton">
+                <img src="../src/assets/images/icons/x.png" alt="Close Icon">
+            </button>            
         </div>
-      </div> -->
+    </div>
 
     <!-- Main section -->
     <div class="mainPart">
