--- a/public/contact.html
+++ b/public/contact.html
@@ -7,11 +7,12 @@
     <!-- Title of the webpage -->
     <title>Contact</title>
     <!-- Link to CSS stylesheet -->
-    <link rel="stylesheet" href="../src/assets/css/style.css">
+    <link id="theme-link" rel="stylesheet" href="../src/assets/css/style.css">
     <!-- Shortcut icon for the webpage -->
     <link rel="shortcut icon" href="../src/assets/images/icons/favicon.ico" type="image/x-icon">
     <!-- Script link for JavaScript file with 'defer' attribute -->
     <script src="../src/assets/js/scripts.js" defer></script>
+    <script src="../src/assets/js/theme-switcher.js" defer></script>
 </head>
 <body>
     <!-- Header section -->
@@ -35,11 +36,28 @@
     <div class="mainPart ContactPart">
         <!-- Paragraph containing contact info -->
         <p class="Contact">The entire webpage was made by Robert Bilík. It was made as a final work for WEB at my high school.
-            <br><br><b>Contact info:</b><br>Email: robert.bilik@spsehavirov.cz<br>Youtube channel: <a href="https://www.youtube.com/@robkooyt" target="_blank">RobkooYT</a><br>Reddit: <a href="https://www.reddit.com/user/u_Robkoo" target="_blank">u_Robkoo</a><br>Discord: Robkoo<br>Github: <a href="https://github.com/RobkooCZ" target="_blank">RobkooCZ</a>
-            <br><br>(PS: You can check out the background images on this page :D)
+            <br><br><b>Contact info:</b><br>Email: robert.bilik@spsehavirov.cz<br>Youtube channel: <a href="https://www.youtube.com/@robkooyt" target="_blank">RobkooYT</a><br>Reddit: <a href="https://www.reddit.com/user/u_Robkoo" target="_blank">u_Robkoo</a><br>Discord: elilover69 (Formerly Robkoo)<br>Github: <a href="https://github.com/RobkooCZ" target="_blank">RobkooCZ</a>
             <br><br>The website works for Edge, Mozzila, Opera GX & Opera and Chrome. It's made with HTML5, CSS and JS. 
-            <br><br>Thanks to <a href="javascript:openSite();">KejBeg</a> for <b>helping</b> me with JS!
+            <br><br>Thanks to <a href="javascript:openSite();">KejBeg</a> for <b>helping</b> me with JS in the Legacy part!
         </p>
+    </div>
+
+    <button id="settingsButton">
+        <img id="settingsImage" src="../src/assets/images/icons/settings_icon.png" alt="Settings Icon">
+    </button>
+    
+    <div id="settingsOverlay">
+        <div id="settingsWindow">
+            <h2 class="settingsTitle">Settings</h2>
+            <div class="toggle-switch">
+                <h2>Theme:</h2>
+                <input type="checkbox" id="theme-switch">
+                <label for="theme-switch"></label>
+            </div>
+            <button id="closeButton">
+                <img src="../src/assets/images/icons/x.png" alt="Close Icon">
+            </button>            
+        </div>
     </div>
 </body>
 </html>
