css files rename

--- a/public/basic_info.html
+++ b/public/basic_info.html
@@ -7,7 +7,7 @@
     <!-- Title of the webpage -->
     <title>Basic Info</title>
     <!-- Link to CSS stylesheet -->
-    <link id="theme-link" rel="stylesheet" href="../src/assets/css/style.css">
+    <link id="theme-link" rel="stylesheet" href="../src/assets/css/legacy-lightTheme.css">
     <!-- Shortcut icon for the webpage -->
     <link rel="shortcut icon" href="../src/assets/images/icons/favicon.ico" type="image/x-icon">
     <!-- Script link for JavaScript file with 'defer' attribute -->
