--- a/public/comparison.html
+++ b/public/comparison.html
@@ -7,7 +7,7 @@
     <!-- Title of the webpage -->
     <title>Comparison</title>
     <!-- Link to CSS stylesheet -->
-    <link id="theme-link" rel="stylesheet" href="../src/assets/css/style.css">
+    <link id="theme-link" rel="stylesheet" href="../src/assets/css/legacy-lightTheme.css">
     <!-- Shortcut icon for the webpage -->
     <link rel="shortcut icon" href="../src/assets/images/icons/favicon.ico" type="image/x-icon">
     <!-- Script link for JavaScript file with 'defer' attribute -->
@@ -18,6 +18,7 @@
     <script src="https://unpkg.com/simplebar@5.3.0/dist/simplebar.min.js" integrity="sha384-oM5U7HaoT1uFyCMwe4FNjJ5MUEt/IGgF8nZG6K8M/A9fIpA3Sz4ri2thQqU6qBsp" crossorigin="anonymous" defer></script>
     <script src="../src/assets/js/theme-switcher.js" defer></script>
 </head>
+
 <body>
     <!-- Header section -->
     <header>
