--- a/public/hoidle.html
+++ b/public/hoidle.html
@@ -7,12 +7,12 @@
     <!-- Title of the webpage -->
     <title>Hoidle</title>
     <!-- Link to CSS stylesheet -->
-    <link id="theme-link" rel="stylesheet" href="../src/assets/css/legacy-lightTheme.css">
+    <link id="theme-link" rel="stylesheet" href="../src/assets/css/hoidle-lightTheme.css">
     <!-- Shortcut icon for the webpage -->
     <link rel="shortcut icon" href="../src/assets/images/icons/favicon.ico" type="image/x-icon">
     <!-- Script link for JavaScript file with 'defer' attribute -->
     <script src="../src/assets/js/scripts.js" defer></script>
-    <script src="../src/assets/js/theme-switcher.js" defer></script>
+    <script src="../src/assets/js/theme-switcher-hoidle.js" defer></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             <!-- Links to different sections -->
             <a class="btn-width" href="basic_info.html">Legacy</a>
             <a class="special-hoidle width" href="hoidle.html">HOIDLE</a>
-            <a class="btn-width" href="https://galuszka.cz" target="_blank">Contact & info</a>
+            <a class="btn-width" href="contactHoidle.html">Contact & info</a>
         </div>
     </nav>
 
