fixed the navbar not showing active site

--- a/public/contactHoidle.html
+++ b/public/contactHoidle.html
@@ -22,7 +22,7 @@
             <!-- Links to different sections -->
             <a class="btn-width" href="basic_info.html">Legacy</a>
             <a class="special-hoidle width" href="hoidle.html">HOIDLE</a>
-            <a class="btn-width" href="contactHoidle.html">Contact & Info</a>
+            <a class="active btn-width" href="contactHoidle.html">Contact & Info</a>
         </div>
     </nav>
 
