--- a/public/hoidle.html
+++ b/public/hoidle.html
@@ -13,6 +13,7 @@
     <!-- Script link for JavaScript file with 'defer' attribute -->
     <script src="../src/assets/js/scripts.js" defer></script>
     <script src="../src/assets/js/theme-switcher-hoidle.js" defer></script>
+    <script src="../src/assets/js/hoidle.js" defer></script>
 </head>
 
 <body>
@@ -44,10 +45,9 @@
         </div>
     </div>
 
-    <!-- Main section -->
-    <div class="mainPart">
-        <!-- Heading indicating work in progress -->
-        <h2 class="WIP">WORK IN PROGRESS</h2>
+    <div id="content">
+        <!-- Input box and button will be appended here by JavaScript -->
     </div>
+
 </body>
 </html>
