PHONE VERSION WORKING!!!!

--- a/public/basic_info.html
+++ b/public/basic_info.html
@@ -34,6 +34,17 @@
         </div>
     </nav>
 
+    <div class="dropdown-mobile">
+        <img class="dropbtn-mobile" src="../src/assets/images/icons/dropdown-dark.png">
+        <div class="dropdown-content-mobile">
+            <a href="basic_info.html">Basic Info</a>
+            <a href="picturegallery.html">Picture Gallery</a>
+            <a href="hoidle.html">HOIDLE</a>
+            <a href="comparison.html">Comparison</a>
+            <a href="contact.html">Contact & Info</a>
+        </div>
+    </div>
+
     <!-- Main content section -->
     <div class="mainPart">
         <!-- Paragraph about Hearts of Iron IV -->
@@ -86,16 +97,19 @@
     
     <div id="settingsOverlay">
         <div id="settingsWindow">
-            <h2 class="settingsTitle">Settings</h2>
-            <div class="toggle-switch">
-                <h2>Theme:</h2>
-                <input type="checkbox" id="theme-switch">
-                <label for="theme-switch"></label>
+            <div class="toggle-container">
+                <h2 class="settingsTitle">Settings</h2>
+                <div class="toggle-switch">
+                    <h2>Theme:</h2>
+                    <input type="checkbox" id="theme-switch">
+                    <label for="theme-switch"></label>
+                </div>
             </div>
             <button id="closeButton">
                 <img src="../src/assets/images/icons/x.png" alt="Close Icon">
             </button>            
         </div>
     </div>
+    
 </body>
 </html>
