--- a/public/contact.html
+++ b/public/contact.html
@@ -33,6 +33,17 @@
         </div>
     </nav>
 
+    <div class="dropdown-mobile">
+        <img class="dropbtn-mobile" src="../src/assets/images/icons/dropdown-dark.png">
+        <div class="dropdown-content-mobile">
+            <a href="basic_info.html">Basic Info</a>
+            <a href="picturegallery.html">Picture Gallery</a>
+            <a href="hoidle.html">HOIDLE</a>
+            <a href="comparison.html">Comparison</a>
+            <a href="contact.html">Contact & Info</a>
+        </div>
+    </div> 
+
     <!-- Main section for contact information -->
     <div class="mainPart ContactPart">
         <!-- Paragraph containing contact info -->
