--- a/public/hoidle.html
+++ b/public/hoidle.html
@@ -27,6 +27,19 @@
         </div>
     </nav>
 
+    <header class="header-mobile">
+        <h2 class="h2-mobile">Hoidle</h2>
+    </header>
+
+    <div class="dropdown-mobile">
+        <img class="dropbtn-mobile" src="../src/assets/images/icons/dropdown-dark.png">
+        <div class="dropdown-content-mobile">
+            <a href="basic_info.html">Legacy</a>
+            <a href="hoidle.html">HOIDLE</a>
+            <a href="contactHoidle.html">Contact & Info</a>
+        </div>
+    </div>
+
     <button id="settingsButton">
         <img id="settingsImage" src="../src/assets/images/icons/settings_icon.png" alt="Settings Icon">
     </button>
