--- a/public/contactHoidle.html
+++ b/public/contactHoidle.html
@@ -26,6 +26,19 @@
         </div>
     </nav>
 
+    <header class="header-mobile">
+        <h2 class="h2-mobile">Contact & Info</h2>
+    </header>
+
+    <div class="dropdown-mobile">
+        <img class="dropbtn-mobile" src="../src/assets/images/icons/dropdown-dark.png">
+        <div class="dropdown-content-mobile">
+            <a href="basic_info.html">Legacy</a>
+            <a href="hoidle.html">HOIDLE</a>
+            <a href="contactHoidle.html">Contact & Info</a>
+        </div>
+    </div>
+
     <!-- Main section for contact information -->
     <div class="mainPart">
         <!-- Paragraph containing contact info -->
